--- a/homepage/content/docs/index.mdx
+++ b/homepage/content/docs/index.mdx
@@ -1,28 +1,33 @@
 ---
 title: Introduction
-description: Welcome to Vibecape - The AI-Powered Creative Writing Studio.
+description: Vibecape - AI-Powered Local-First Document Editor
 ---
 
 # Introduction
 
-**Vibecape** (formerly Jezzlab) is a local-first creative writing studio designed for novelists, screenwriters, and world-builders who want to collaborate with AI without sacrificing privacy or control.
+**Vibecape** 是一款 AI 驱动的本地优先文档编辑器，专为需要 AI 协作写作但又注重隐私和数据控制的用户设计。
 
-## Why Vibecape?
+## 为什么选择 Vibecape？
 
-Traditional text editors treat stories as linear strings of text. **Vibecape treats stories as worlds.**
+- **本地优先**: 所有数据存储在本地，你的文档永远属于你
+- **AI 原生**: 深度集成多种 AI 模型（OpenAI、DeepSeek、Google、xAI 等）
+- **工作区管理**: 统一的文档根目录，轻松备份和迁移
+- **富文本编辑**: 基于 Tiptap 的现代编辑器，支持 Markdown
 
-- **Context-Aware AI**: The AI knows your characters, locations, and lore. It doesn't just autocomplete text; it suggests plot points that fit your established world logic.
-- **Visual Orchestration**: Manage timelines, character relationships, and story beats on an infinite canvas.
-- **Local & Private**: Your magnum opus stays on your machine. We don't train on your data.
+## 核心功能
 
-## Key Features
+| 功能 | 描述 |
+|------|------|
+| **AI 对话** | 与 AI 进行上下文感知的对话，支持流式输出 |
+| **多模型支持** | 配置多个 AI 服务商和模型，按需切换 |
+| **工作区** | 每个项目独立的文档库、聊天记录和 AI 提示词 |
+| **llm.txt** | 为每个工作区定制 AI 上下文提示词 |
+| **树形文档** | 支持父子层级的文档组织结构 |
+| **OSS 集成** | 可选的云存储图片上传（阿里云、腾讯云、S3） |
 
-- **World Bible**: A structured database for your lore that the AI actively references.
-- **Dynamic Personas**: Configure AI writing partners for different needs (e.g., "Ruthless Editor", "Imaginative Co-author", "Loremaster").
-- **Focus Mode**: A distraction-free writing environment with typewriter scrolling and ambient sounds.
+## 快速开始
 
-## Getting Started
-
-1. **[Download the latest release](https://github.com/wangenius/vibecape/releases/latest)** for macOS.
-2. Install the application (drag to Applications folder).
-3. Open Vibecape and create your first "World".
+1. **[下载最新版本](https://github.com/wangenius/vibecape/releases/latest)** (macOS / Windows / Linux)
+2. 安装并启动应用
+3. 配置 AI 服务商（设置 API Key）
+4. 创建你的第一个工作区
