--- a/package/src/renderer/lib/locales/en/chat.json
+++ b/package/src/renderer/lib/locales/en/chat.json
@@ -9,7 +9,8 @@
   },
   "input": {
     "placeholder": "Type your message...",
-    "stopGeneration": "Stop generation"
+    "stopGeneration": "Stop generation",
+    "queuePending": "{{count}} message(s) pending"
   },
   "thread": {
     "newChat": "New Chat",
