--- a/package/src/renderer/lib/locales/en/editor.json
+++ b/package/src/renderer/lib/locales/en/editor.json
@@ -90,7 +90,10 @@
     "thinking": "Thinking...",
     "failed": "Generation failed",
     "unknownError": "Unknown error",
-    "apiNotEnabled": "Docs AI API not enabled"
+    "apiNotEnabled": "Docs AI API not enabled",
+    "idleHint": "⌘↵ Send",
+    "completedHint": "⇧↵ Apply",
+    "errorHint": "⌘↵ Retry"
   },
   "contextMenu": {
     "copySuccess": "Copy success",
