--- a/homepage/content/docs/guide/creating-project.mdx
+++ b/homepage/content/docs/guide/creating-project.mdx
@@ -12,7 +12,7 @@ description: 了解 Vibecape 工作区的功能和使用方法
 每个工作区包含以下内容：
 
 ```
-{workspace_id}/
+{repository_id}/
 ├── config.json      # 工作区配置
 ├── docs.db          # 文档数据库
 ├── chat.db          # 项目聊天记录
@@ -55,7 +55,7 @@ description: 了解 Vibecape 工作区的功能和使用方法
 
 ## 术语表
 - Vibecape: 文档编辑器
-- Workspace: 工作区
+- Repository: 工作区
 
 ## 注意事项
 - 使用中文
