--- a/homepage/content/docs/guide/getting-started.mdx
+++ b/homepage/content/docs/guide/getting-started.mdx
@@ -70,10 +70,10 @@ Vibecape 使用本地存储，数据目录结构：
 ├── config.json          # 应用配置
 ├── app.db               # AI 配置数据库
 ├── chat.db              # 全局聊天记录
-└── workspaces.json      # 工作区索引
+└── repositorys.json      # 工作区索引
 
 {docs_root}/             # 文档根目录（可配置）
-├── {workspace_id}/      # 工作区目录
+├── {repository_id}/      # 工作区目录
 │   ├── config.json      # 工作区配置
 │   ├── docs.db          # 文档数据
 │   ├── chat.db          # 项目聊天
