--- a/package/src/renderer/lib/locales/en/common.json
+++ b/package/src/renderer/lib/locales/en/common.json
@@ -116,32 +116,32 @@
     "unauthorized": "Please log in first",
     "serverError": "Server error, please try again later"
   },
-  "workspace": {
+  "repository": {
     "selectDocsRoot": "Select Documents Folder",
-    "selectDocsRootDesc": "Please select a folder to store all workspaces",
+    "selectDocsRootDesc": "Please select a folder to store all repositorys",
     "docsRootSelected": "Documents folder selected",
-    "createWorkspace": "Create Workspace",
-    "workspaceName": "Workspace name",
-    "workspaceCreated": "Workspace created",
-    "workspaceDeleted": "Workspace deleted",
-    "deleteWorkspace": "Delete workspace",
-    "deleteConfirm": "Are you sure you want to delete workspace \"{{name}}\"? This action cannot be undone.",
-    "openWorkspace": "Open Workspace",
-    "workspaceReady": "Workspace is ready",
+    "createRepository": "Create Repository",
+    "repositoryName": "Repository name",
+    "repositoryCreated": "Repository created",
+    "repositoryDeleted": "Repository deleted",
+    "deleteRepository": "Delete repository",
+    "deleteConfirm": "Are you sure you want to delete repository \"{{name}}\"? This action cannot be undone.",
+    "openRepository": "Open Repository",
+    "repositoryReady": "Repository is ready",
     "initializationFailed": "Initialization failed",
-    "recentTitle": "Recent workspaces",
+    "recentTitle": "Recent repositorys",
     "refreshHistory": "Refresh",
-    "noHistory": "No recent workspace records yet",
+    "noHistory": "No recent repository records yet",
     "missing": "Missing",
     "lastOpened": "Last opened: {{time}}",
-    "openRecent": "Open workspace",
+    "openRecent": "Open repository",
     "removeRecent": "Remove from list",
     "removedFromHistory": "Removed from history",
-    "noWorkspaceOpen": "No workspace open",
+    "noRepositoryOpen": "No repository open",
     "settingsSaved": "Settings saved",
     "basicInfo": "Basic Info",
-    "basicInfoDesc": "Configure basic workspace information",
-    "workspaceNameDesc": "Used to identify and display the workspace",
+    "basicInfoDesc": "Configure basic repository information",
+    "repositoryNameDesc": "Used to identify and display the repository",
     "assetSettings": "Asset Settings",
     "assetSettingsDesc": "Configure asset upload and storage settings",
     "assetUploadPriority": "Asset Upload Priority",
@@ -149,7 +149,7 @@
     "localFirst": "Local First",
     "ossFirst": "Cloud Storage First",
     "linkSettings": "Link Settings",
-    "linkSettingsDesc": "Link workspace with external documentation systems",
+    "linkSettingsDesc": "Link repository with external documentation systems",
     "linkEnabled": "Enable Link",
     "linkEnabledDesc": "Enable to configure link target and paths",
     "linkDisabled": "Disabled",
@@ -169,7 +169,7 @@
     "import": "Import",
     "importDirectory": "Import Directory",
     "importMarkdown": "Import Markdown Files",
-    "importVibecape": "Import Vibecape Workspace",
+    "importVibecape": "Import Vibecape Repository",
     "importSuccess": "Successfully imported {{count}} documents",
     "trash": "Trash",
     "trashDesc": "View and restore deleted documents",
@@ -183,7 +183,7 @@
   "sidebar": {
     "docs": "Docs",
     "toc": "TOC",
-    "workspace": "Settings"
+    "repository": "Settings"
   },
   "save": "Save",
   "cancel": "Cancel",
