--- a/package/src/renderer/lib/locales/en/settings.json
+++ b/package/src/renderer/lib/locales/en/settings.json
@@ -19,10 +19,10 @@
   "proxyAddress": "Proxy Address",
   "proxyPlaceholder": "e.g.: http://127.0.0.1:7890",
   "proxySupport": "Supports HTTP, HTTPS proxy addresses",
-  "workspaceStorage": "Workspace Storage",
-  "workspaceStorageDesc": "Configure the storage location for workspace files",
+  "repositoryStorage": "Repository Storage",
+  "repositoryStorageDesc": "Configure the storage location for repository files",
   "docsRoot": "Documents Root",
-  "docsRootDesc": "All workspaces will be stored in this directory",
+  "docsRootDesc": "All repositorys will be stored in this directory",
   "cloudStorage": "Cloud Storage",
   "cloudStorageDesc": "Configure cloud object storage service for storing images, documents and other resources",
   "enableCloudStorage": "Enable Cloud Storage",
@@ -128,7 +128,7 @@
   "exportFailed": "Export failed",
   "newDoc": "New Document",
   "openInFinder": "Open in Finder",
-  "closeWorkspace": "Close Workspace",
+  "closeRepository": "Close Repository",
   "docNamePlaceholder": "Enter document name",
   "enterDocName": "Please enter document name",
   "docCreated": "Document created",
@@ -153,7 +153,7 @@
   "collapseDesc": "Collapse description",
   "expandDesc": "Expand description",
   "enterDesc": "Enter description...",
-  "initializingWorkspace": "Initializing Workspace",
+  "initializingRepository": "Initializing Repository",
   "enterTitle": "Enter title...",
   "slashPlaceholder": "Type / to open command menu...",
   "toc": "TOC",
