--- a/package/src/renderer/lib/locales/zh/common.json
+++ b/package/src/renderer/lib/locales/zh/common.json
@@ -116,18 +116,18 @@
     "unauthorized": "请先登录",
     "serverError": "服务器错误,请稍后再试"
   },
-  "workspace": {
+  "repository": {
     "selectDocsRoot": "选择文档目录",
     "selectDocsRootDesc": "请选择一个目录来存储所有工作区",
     "docsRootSelected": "文档目录已设置",
-    "createWorkspace": "新建工作区",
-    "workspaceName": "工作区名称",
-    "workspaceCreated": "工作区已创建",
-    "workspaceDeleted": "工作区已删除",
-    "deleteWorkspace": "删除工作区",
+    "createRepository": "新建工作区",
+    "repositoryName": "工作区名称",
+    "repositoryCreated": "工作区已创建",
+    "repositoryDeleted": "工作区已删除",
+    "deleteRepository": "删除工作区",
     "deleteConfirm": "确定要删除工作区 \"{{name}}\" 吗？此操作不可撤销。",
-    "openWorkspace": "打开工作区",
-    "workspaceReady": "工作区已就绪",
+    "openRepository": "打开工作区",
+    "repositoryReady": "工作区已就绪",
     "initializationFailed": "初始化失败",
     "recentTitle": "最近打开",
     "refreshHistory": "刷新",
@@ -137,11 +137,11 @@
     "openRecent": "打开工作区",
     "removeRecent": "从列表移除",
     "removedFromHistory": "已从历史记录移除",
-    "noWorkspaceOpen": "未打开工作区",
+    "noRepositoryOpen": "未打开工作区",
     "settingsSaved": "设置已保存",
     "basicInfo": "基本信息",
     "basicInfoDesc": "设置工作区的基本信息",
-    "workspaceNameDesc": "用于标识和显示工作区",
+    "repositoryNameDesc": "用于标识和显示工作区",
     "assetSettings": "资源设置",
     "assetSettingsDesc": "配置资源上传和存储相关设置",
     "assetUploadPriority": "资源上传优先级",
@@ -183,7 +183,7 @@
   "sidebar": {
     "docs": "文档",
     "toc": "目录",
-    "workspace": "设置"
+    "repository": "设置"
   },
   "save": "保存",
   "cancel": "取消",
