--- a/package/src/renderer/lib/locales/zh/settings.json
+++ b/package/src/renderer/lib/locales/zh/settings.json
@@ -19,8 +19,8 @@
   "proxyAddress": "代理地址",
   "proxyPlaceholder": "例如：http://127.0.0.1:7890",
   "proxySupport": "支持 HTTP、HTTPS 代理地址",
-  "workspaceStorage": "工作区存储",
-  "workspaceStorageDesc": "配置工作区文件的存储位置",
+  "repositoryStorage": "工作区存储",
+  "repositoryStorageDesc": "配置工作区文件的存储位置",
   "docsRoot": "文档根目录",
   "docsRootDesc": "所有工作区将存储在此目录下",
   "cloudStorage": "云存储",
@@ -128,7 +128,7 @@
   "exportFailed": "导出失败",
   "newDoc": "新建文档",
   "openInFinder": "在 Finder 中打开",
-  "closeWorkspace": "关闭工作区",
+  "closeRepository": "关闭工作区",
   "docNamePlaceholder": "输入文档名称",
   "enterDocName": "请输入文档名称",
   "docCreated": "文档已创建",
@@ -153,7 +153,7 @@
   "collapseDesc": "收起描述",
   "expandDesc": "展开描述",
   "enterDesc": "输入描述...",
-  "initializingWorkspace": "初始化工作区",
+  "initializingRepository": "初始化工作区",
   "enterTitle": "输入标题...",
   "slashPlaceholder": "输入 / 打开命令菜单...",
   "toc": "目录",
