--- a/package/src/renderer/lib/locales/en/editor.json
+++ b/package/src/renderer/lib/locales/en/editor.json
@@ -129,6 +129,10 @@
     "uploadSuccess": "Image uploaded successfully"
   },
   "table": {
+    "columnActions": "Column",
+    "rowActions": "Row",
+    "cellActions": "Cell",
+    "tableActions": "Table",
     "addRowBefore": "Insert row above",
     "addRowAfter": "Insert row below",
     "addColBefore": "Insert column left",
@@ -138,6 +142,7 @@
     "deleteTable": "Delete table",
     "mergeCells": "Merge cells",
     "splitCell": "Split cell",
+    "clearCell": "Clear content",
     "toggleHeaderRow": "Toggle header row"
   }
 }
