--- a/package/src/renderer/lib/locales/en/settings.json
+++ b/package/src/renderer/lib/locales/en/settings.json
@@ -156,6 +156,14 @@
   "initializingRepository": "Initializing Repository",
   "enterTitle": "Enter title...",
   "slashPlaceholder": "Type / to open command menu...",
+  "headingPlaceholder": {
+    "h1": "Heading 1",
+    "h2": "Heading 2",
+    "h3": "Heading 3",
+    "h4": "Heading 4",
+    "h5": "Heading 5",
+    "h6": "Heading 6"
+  },
   "toc": "TOC",
   "showToc": "Show Table of Contents",
   "showDocTree": "Show Document Tree",
