--- a/package/src/renderer/lib/locales/zh/settings.json
+++ b/package/src/renderer/lib/locales/zh/settings.json
@@ -156,6 +156,14 @@
   "initializingRepository": "初始化工作区",
   "enterTitle": "输入标题...",
   "slashPlaceholder": "输入 / 打开命令菜单...",
+  "headingPlaceholder": {
+    "h1": "标题 1",
+    "h2": "标题 2",
+    "h3": "标题 3",
+    "h4": "标题 4",
+    "h5": "标题 5",
+    "h6": "标题 6"
+  },
   "toc": "目录",
   "showToc": "显示目录",
   "showDocTree": "显示文档树",
